--- a/css/style-2.css
+++ b/css/style-2.css
@@ -16,7 +16,6 @@ a{
     top: 31px;
     margin-right: 30px;
     background: #F1F2F4;
-/*    background: #fff;*/
     transform: translate(-50%, -50%);
     color: black;
     height: 37.5px;
@@ -84,10 +83,13 @@ button{
 }
 .navigation{
     display: flex;
-    justify-content: space-around;
+    column-gap: 30px;
     width: 20%;
     font-size: 16px;
     list-style-type: none;
+}
+.hamburger-menu{
+    display: none;
 }
 .navigation__item{
     color: #000;
@@ -173,16 +175,6 @@ button{
     font-size: 32px;
     margin-bottom: 50px;
 }
-.header__button{
-    width: 219px;
-    height: 64px;
-    background: #151C22;
-    color: #FFFFFF;
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 .header__gallery{
     display: flex;
     width: 25%;
@@ -217,7 +209,7 @@ select{
     display: flex;
     font-size: 18px;
 }
-label{
+label[for="filter"]{
     width: 193px;
     height: 50px;
     border: 2px solid #151C22;
