--- a/css/style-3.css
+++ b/css/style-3.css
@@ -28,10 +28,13 @@ a{
 }
 .navigation{
     display: flex;
-    justify-content: space-around;
-    width: 20%;
+    column-gap: 30px;
+    width: 30%;
     font-size: 16px;
     list-style-type: none;
+}
+.hamburger-menu{
+    display: none;
 }
 .navigation__item{
     color: #000;
@@ -75,6 +78,61 @@ a{
 .shopping-basket[data-count=""]:before{
     display: none;
 }
+.search-box { 
+    position: absolute;
+    top: 31px;
+    margin-right: 30px;
+    background: #F1F2F4;
+    transform: translate(-50%, -50%);
+    color: black;
+    height: 37.5px;
+    border-radius: 40px;
+    padding: 10px;
+}
+.search-box:hover > .search-txt {
+    width: 250px;
+    padding: 0 6px;
+}
+.search-box:hover > .search-btn{
+    position: fixed;
+    margin-left: 230px;
+}
+.search-btn {
+    color: #eeeeee;
+    float: right;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    transition: 0.5s;
+    color: white;
+    cursor: pointer;
+    text-decoration:none;
+    background-image: url(../img/search.svg);
+}
+.search-txt {
+    border: none;
+    background: none;
+    outline: none;
+    float: left;
+    padding: 0;
+    font-size: 16px;
+    transition: 0.4s;
+    line-height: 20px;
+    width: 0px;
+    font-weight: bold;
+}
+button{
+    border: none;
+    background: none;  
+}
+.search-box{
+    content: "";
+    clear: both;
+    display: block;
+}
 .logo{
     margin-right: 70px;
     width: 73px;
@@ -111,13 +169,13 @@ a{
 }
 @keyframes hover{
     0%{
-        transform: translateY(-60px);
+        transform: translateY(0px);
     }
     50%{
-        transform: translateY(60px);
+        transform: translateY(-50px);
     }
     100%{
-        transform: translateY(-60px);
+        transform: translateY(100px);
     }
 }
 .big__img:hover{
@@ -201,12 +259,6 @@ a{
 }
 .ymal__title{
     font-size: 32px;
-}
-.ymal__link{
-    color: #151C22;
-    font-size: 18px;
-    padding-bottom: 3px;
-    border-bottom: 2px solid #151C22;
 }
 .ymal__gallery-box{
     display: flex;
