--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@ a{
     text-decoration: none;
     color: #000;
 }
+br {
+  display: block;
+}
 .search-box {
     position: absolute;
     top: 31px;
