--- a/css/style-2.css
+++ b/css/style-2.css
@@ -6,6 +6,7 @@ html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Work Sans';
 }
 a{
     text-decoration: none;
@@ -232,6 +233,9 @@ label[for="filter"]{
     justify-content: space-between;
     flex-wrap: wrap;
 }
+.gallery__item {
+    margin-bottom: 40px;
+}
 .gallery__img{
     margin-bottom: 15px;
 }
@@ -245,7 +249,24 @@ label[for="filter"]{
 }
 .gallery__price{
     font-size: 16px;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
+}
+.gallery__button {
+    width: 150px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    background: #151C22;
+    transition: all 2s ease;
+}
+.gallery__button:hover{
+    background: #6e6363;
+}
+.add__to__cart {
+    color: #fff;
+    font-size: 16px;
 }
 .load__more{
     width: 200px;
