--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,14 @@ html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Work Sans';
 }
 a{
     text-decoration: none;
     color: #000;
 }
 br {
-  display: block;
+    display: none;
 }
 .search-box {
     position: absolute;
@@ -328,6 +329,24 @@ button{
     font-weight: bold;
 }
 .gallery__price{
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+.gallery__button {
+    width: 150px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    background: #151C22;
+    transition: all 2s ease;
+}
+.gallery__button:hover{
+    background: #6e6363;
+}
+.add__to__cart {
+    color: #fff;
     font-size: 16px;
 }
 .News{
